--- a/FoodCollector/FetchedDataNotificationView.xib
+++ b/FoodCollector/FetchedDataNotificationView.xib
@@ -45,7 +45,7 @@
                             <constraint firstAttribute="width" constant="150" id="cKO-zd-itB"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <state key="normal" title="Show details">
+                        <state key="normal" title="Show Details">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
