--- a/FoodCollector/Base.lproj/PublicationDetsilsCollectorActionsHeaderView.xib
+++ b/FoodCollector/Base.lproj/PublicationDetsilsCollectorActionsHeaderView.xib
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsPublisherActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsCollectorActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAK-ST-0jT">
                     <rect key="frame" x="362" y="15" width="50" height="50"/>
+                    <animations/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="4rf-BI-qQL"/>
@@ -27,6 +28,7 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxk-05-spA">
                     <rect key="frame" x="535" y="15" width="50" height="50"/>
+                    <animations/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Qmh-Qu-fsk"/>
@@ -41,6 +43,7 @@
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxi-yq-Ucm">
                     <rect key="frame" x="0.0" y="79" width="600" height="1"/>
+                    <animations/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="etz-84-aZW"/>
@@ -48,12 +51,13 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="goW-fJ-MoN">
                     <rect key="frame" x="188" y="15" width="50" height="50"/>
+                    <animations/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="sXv-sE-86W"/>
                         <constraint firstAttribute="height" constant="50" id="xYP-j8-Ovq"/>
                     </constraints>
-                    <state key="normal" image="Twitter">
+                    <state key="normal" image="Navigate">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -62,12 +66,13 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RF8-iD-c8n">
                     <rect key="frame" x="15" y="15" width="50" height="50"/>
+                    <animations/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Dnu-me-cu9"/>
                         <constraint firstAttribute="height" constant="50" id="aIg-Ww-rlb"/>
                     </constraints>
-                    <state key="normal" image="Facebook">
+                    <state key="normal" image="rishum">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -75,6 +80,7 @@
                     </connections>
                 </button>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="RF8-iD-c8n" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="0tT-UH-bgU"/>
@@ -136,17 +142,17 @@
                 <outlet property="button1to2widthConstraint" destination="zTc-hc-F3I" id="uUg-Dx-Dob"/>
                 <outlet property="button2to3widthConstraint" destination="x0M-Xi-eOU" id="643-Yg-sDt"/>
                 <outlet property="button3to4widthConstraint" destination="cOA-E3-bCG" id="fNz-Zc-9bJ"/>
-                <outlet property="facebookButton" destination="RF8-iD-c8n" id="7gG-ze-X1W"/>
+                <outlet property="navigateButton" destination="goW-fJ-MoN" id="tL0-ta-TBi"/>
                 <outlet property="phoneCallButton" destination="sxk-05-spA" id="HlO-Vw-hM5"/>
+                <outlet property="registerButton" destination="RF8-iD-c8n" id="QTZ-nY-Fc2"/>
                 <outlet property="smsButton" destination="mAK-ST-0jT" id="coT-0q-WQh"/>
-                <outlet property="twitterButton" destination="goW-fJ-MoN" id="rMV-aj-sKi"/>
             </connections>
         </view>
     </objects>
     <resources>
-        <image name="Facebook" width="26" height="26"/>
-        <image name="Twitter" width="26" height="26"/>
+        <image name="Navigate" width="30" height="30"/>
         <image name="call" width="26" height="26"/>
+        <image name="rishum" width="34" height="24"/>
         <image name="sms" width="30" height="30"/>
     </resources>
 </document>
