--- a/FoodCollector/Base.lproj/PublicationDetsilsPublisherActionsHeaderView.xib
+++ b/FoodCollector/Base.lproj/PublicationDetsilsPublisherActionsHeaderView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsCollectorActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicationDetsilsPublisherActionsHeaderView" customModule="FoodCollector" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -57,7 +57,7 @@
                         <constraint firstAttribute="width" constant="50" id="sXv-sE-86W"/>
                         <constraint firstAttribute="height" constant="50" id="xYP-j8-Ovq"/>
                     </constraints>
-                    <state key="normal" image="Navigate">
+                    <state key="normal" image="Twitter">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -72,7 +72,7 @@
                         <constraint firstAttribute="width" constant="50" id="Dnu-me-cu9"/>
                         <constraint firstAttribute="height" constant="50" id="aIg-Ww-rlb"/>
                     </constraints>
-                    <state key="normal" image="rishum">
+                    <state key="normal" image="Facebook">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -142,17 +142,17 @@
                 <outlet property="button1to2widthConstraint" destination="zTc-hc-F3I" id="uUg-Dx-Dob"/>
                 <outlet property="button2to3widthConstraint" destination="x0M-Xi-eOU" id="643-Yg-sDt"/>
                 <outlet property="button3to4widthConstraint" destination="cOA-E3-bCG" id="fNz-Zc-9bJ"/>
-                <outlet property="navigateButton" destination="goW-fJ-MoN" id="tL0-ta-TBi"/>
+                <outlet property="facebookButton" destination="RF8-iD-c8n" id="7gG-ze-X1W"/>
                 <outlet property="phoneCallButton" destination="sxk-05-spA" id="HlO-Vw-hM5"/>
-                <outlet property="registerButton" destination="RF8-iD-c8n" id="QTZ-nY-Fc2"/>
                 <outlet property="smsButton" destination="mAK-ST-0jT" id="coT-0q-WQh"/>
+                <outlet property="twitterButton" destination="goW-fJ-MoN" id="rMV-aj-sKi"/>
             </connections>
         </view>
     </objects>
     <resources>
-        <image name="Navigate" width="30" height="30"/>
+        <image name="Facebook" width="26" height="26"/>
+        <image name="Twitter" width="26" height="26"/>
         <image name="call" width="26" height="26"/>
-        <image name="rishum" width="34" height="24"/>
         <image name="sms" width="30" height="30"/>
     </resources>
 </document>
