--- a/FoodCollector/Base.lproj/PublicationEditorTVCContactPublisherCustomCell.xib
+++ b/FoodCollector/Base.lproj/PublicationEditorTVCContactPublisherCustomCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -8,20 +8,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="onlyLabelCustomCell" rowHeight="45" id="KGk-i7-Jjw" userLabel="Publish Editor Only Label Cell" customClass="PublicationEditorTVCOnlyLabelCustomCell" customModule="FoodCollector" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactPublisherCustomCell" rowHeight="45" id="KGk-i7-Jjw" userLabel="Publish Contact Publisher Cell" customClass="PublicationEditorTVCContactPublisherCustomCell" customModule="FoodCollector" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cF-9F-VqL">
-                        <rect key="frame" x="8" y="12" width="297" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cF-9F-VqL">
+                        <rect key="frame" x="77" y="12" width="228" height="21"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="gLb-Vj-YRz">
+                        <rect key="frame" x="18" y="7" width="51" height="31"/>
+                        <animations/>
+                        <connections>
+                            <action selector="contactPubliserSwitchAction:" destination="KGk-i7-Jjw" eventType="valueChanged" id="1IK-0C-cfC"/>
+                        </connections>
+                    </switch>
                 </subviews>
                 <animations/>
                 <constraints>
@@ -35,6 +42,7 @@
             <animations/>
             <connections>
                 <outlet property="cellLabel" destination="8cF-9F-VqL" id="1Cf-0I-Yle"/>
+                <outlet property="contactPubliserSwitch" destination="gLb-Vj-YRz" id="Map-YD-gQA"/>
             </connections>
             <point key="canvasLocation" x="353" y="355.5"/>
         </tableViewCell>
