--- a/FoodCollector/Base.lproj/PublicationOptionsMenuItemCell.xib
+++ b/FoodCollector/Base.lproj/PublicationOptionsMenuItemCell.xib
@@ -22,7 +22,7 @@
                         <rect key="frame" x="8" y="11" width="106" height="21"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
